--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     implementation 'com.jjoe64:graphview:4.2.2'
     // ngày 17.01.2021đồ giao tiếp với usb
     implementation 'com.github.mik3y:usb-serial-for-android:2.+'
-
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
 }
